# spear-and-shield-agent

./: .gitignore  Docker-compose.yml  Dockerfile  README.md  docker-compose.debug.yml  pyproject.toml
.devcontainer/: devcontainer.json
debug/: create.py
spear_and_shield_agent/: __init__.py
