[tool.poetry]
name = "spear-and-shield-agent"
version = "0.1.0"
description = ""
authors = ["Blake <80996688+BlakeTnr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gql = "^3.5.0"
aiohttp = "^3.9.5"
pyroute2 = "^0.7.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
